class MsgDefine{
    public static test_sub_struct = "test_sub_struct" ;
    public static test_protobuf = "test_protobuf" ;
    public static TestOtherProtobuf = "TestOtherProtobuf" ;
    public static handshake = "handshake" ;
    public static keepalive = "keepalive" ;
    public static exception = "exception" ;
    public static login = "login" ;
    public static logout = "logout" ;
    public static create_user = "create_user" ;
    public static get_user_info = "get_user_info" ;
    public static modify_user_info = "modify_user_info" ;
    public static user_info_change = "user_info_change" ;
    public static chat = "chat" ;
    public static suggest = "suggest" ;
    public static match_game = "match_game" ;
    public static cancel_match_game = "cancel_match_game" ;
    public static match_game_failed = "match_game_failed" ;
    public static game_ready = "game_ready" ;
    public static game_begin = "game_begin" ;
    public static reentry_game = "reentry_game" ;
    public static quit_game = "quit_game" ;
    public static game_score_change = "game_score_change" ;
    public static game_private_data = "game_private_data" ;
    public static game_over = "game_over" ;
    public static get_love_game_list = "get_love_game_list" ;
    public static get_game_data = "get_game_data" ;
    public static game_online_num = "game_online_num" ;
    public static get_friend_list = "get_friend_list" ;
    public static add_friend = "add_friend" ;
    public static agree_add_friend = "agree_add_friend" ;
    public static remove_friend = "remove_friend" ;
    public static search_friend = "search_friend" ;
    public static recommend_friend = "recommend_friend" ;
    public static get_offline_data = "get_offline_data" ;
    public static invite_game = "invite_game" ;
    public static cancel_invite_game = "cancel_invite_game" ;
    public static agree_invite_game = "agree_invite_game" ;
}