class MsgDefine{
    public static test_sub_struct = "test_sub_struct" ;
    public static test_protobuf = "test_protobuf" ;
    public static TestOtherProtobuf = "TestOtherProtobuf" ;
    public static handshake = "handshake" ;
    public static keepalive = "keepalive" ;
    public static exception = "exception" ;
    public static login = "login" ;
    public static logout = "logout" ;
    public static create_user = "create_user" ;
    public static get_user_info = "get_user_info" ;
    public static modify_user_info = "modify_user_info" ;
    public static user_info_change = "user_info_change" ;
    public static chat = "chat" ;
    public static suggest = "suggest" ;
    public static match_game = "match_game" ;
    public static cancel_match_game = "cancel_match_game" ;
    public static match_game_failed = "match_game_failed" ;
    public static game_ready = "game_ready" ;
    public static game_begin = "game_begin" ;
    public static reentry_game = "reentry_game" ;
    public static quit_game = "quit_game" ;
    public static game_score_change = "game_score_change" ;
    public static game_private_data = "game_private_data" ;
    public static send_game_private_data = "send_game_private_data" ;
    public static broadcast_game_private_data = "broadcast_game_private_data" ;
    public static game_over = "game_over" ;
    public static get_love_game_list = "get_love_game_list" ;
    public static get_game_data = "get_game_data" ;
    public static game_online_num = "game_online_num" ;
    public static get_friend_list = "get_friend_list" ;
    public static add_friend = "add_friend" ;
    public static agree_add_friend = "agree_add_friend" ;
    public static remove_friend = "remove_friend" ;
    public static search_friend = "search_friend" ;
    public static recommend_friend = "recommend_friend" ;
    public static get_offline_data = "get_offline_data" ;
    public static invite_game = "invite_game" ;
    public static cancel_invite_game = "cancel_invite_game" ;
    public static agree_invite_game = "agree_invite_game" ;
    public static feedback = "feedback" ;
    public static add_black = "add_black" ;
    public static cancel_black = "cancel_black" ;
    public static get_black_list = "get_black_list" ;
    public static get_game_word_rank = "get_game_word_rank" ;
    public static get_game_friend_rank = "get_game_friend_rank" ;
    public static update_rank_game_data = "update_rank_game_data" ;
    public static like = "like" ;
    public static voice_single_chat = "voice_single_chat" ;
    public static voice_multiple_chat = "voice_multiple_chat" ;
    public static update_access_token = "update_access_token" ;
    public static get_user_achievement = "get_user_achievement" ;
    public static commodity_trading = "commodity_trading" ;
    public static get_user_commodity = "get_user_commodity" ;
    public static set_user_commodity = "set_user_commodity" ;
    public static get_like_list = "get_like_list" ;
    public static head_portrait_set = "head_portrait_set" ;
    public static live_img_add = "live_img_add" ;
    public static live_img_delete = "live_img_delete" ;
    public static live_img_replace = "live_img_replace" ;
    public static live_img_move = "live_img_move" ;
    public static account_binding = "account_binding" ;
    public static create_game_room = "create_game_room" ;
    public static update_game_room_info = "update_game_room_info" ;
    public static leave_game_room = "leave_game_room" ;
    public static join_game_room_failed = "join_game_room_failed" ;
    public static get_game_today_rank = "get_game_today_rank" ;
}