
var MsgEnum = {
  test_sub_struct:1,
  test_protobuf:2,
  TestOtherProtobuf:3,
  handshake:4,
  keepalive:5,
  exception:6,
  login:7,
  logout:8,
  create_user:9,
  get_user_info:10,
  modify_user_info:11,
  user_info_change:12,
  chat:13,
  suggest:14,
  match_game:15,
  cancel_match_game:16,
  match_game_failed:17,
  game_ready:18,
  game_begin:19,
  reentry_game:20,
  quit_game:21,
  game_score_change:22,
  game_private_data:23,
  send_game_private_data:24,
  broadcast_game_private_data:25,
  game_over:26,
  get_love_game_list:27,
  get_game_data:28,
  game_online_num:29,
  get_friend_list:30,
  add_friend:31,
  agree_add_friend:32,
  remove_friend:33,
  search_friend:34,
  recommend_friend:35,
  get_offline_data:36,
  invite_game:37,
  cancel_invite_game:38,
  agree_invite_game:39,
  feedback:40,
  add_black:41,
  cancel_black:42,
  get_black_list:43,
  get_game_word_rank:44,
  get_game_friend_rank:45,
  update_rank_game_data:46,
  like:47,
  voice_single_chat:48,
  voice_multiple_chat:49,
  update_access_token:50,
  get_user_achievement:51,
  commodity_trading:52,
  get_user_commodity:53,
  set_user_commodity:54,
  get_like_list:55,
  head_portrait_set:56,
  live_img_add:57,
  live_img_delete:58,
  live_img_replace:59,
  live_img_move:60,
  account_binding:61,
  create_game_room:62,
  update_game_room_info:63,
  leave_game_room:64,
  join_game_room_failed:65,
  get_game_today_rank:66,
};

export default {MsgEnum};

